# nos-core

./: Cargo.toml
.github/workflows/: release.yml
debian/: nos-core.service
